Fix home page hero illustration alignment (#72)

--- a/app/assets/application.scss
+++ b/app/assets/application.scss
@@ -6,6 +6,19 @@
 // NHS.UK Eleventy Plugin components
 @forward "pkg:@x-govuk/nhsuk-eleventy-plugin";
 
-.app-section-white {
-  background-color: white;
+.app-homepage {
+  .app-section-white {
+    background-color: white;
+  }
+
+  .nhsuk-hero {
+    .nhsuk-grid-row {
+      @include nhsuk-flex;
+    }
+
+    .nhsuk-grid-column-one-third,
+    .nhsuk-grid-column-two-thirds {
+      @include nhsuk-flex-item;
+    }
+  }
 }
